# dailyschedule-rust

./: Cargo.toml  LICENSE.md  README.md  TODO
examples/: schedule_printer.rs  time_clock.rs
src/: lib.rs
tests/: tests.rs
