[package]
name = "dailyschedule"
version = "0.0.1"
authors = ["Willem <willem66745@gmail.com>"]

[dependencies]
time = "*"
rand = "*"

[dependencies.zoneinfo]
git = "https://github.com/willem66745/zoneinfo-rust"

[dev-dependencies.daylight]
git = "https://github.com/willem66745/daylight-rust"

[[test]]
name = "tests"
